modification of TOOLS/bat_patch.f90 for time

--- a/TOOLS/Makefile
+++ b/TOOLS/Makefile
@@ -1,25 +1,20 @@
 # MAkefile for bat_fit
-NETCDF_ROOT=/usr
-NCDF = -I$(NETCDF_ROOT)/include -L$(NETCDF_ROOT)/lib -lnetcdff -lnetcdf
+include make.macro
+
+EXEC = bat_fit.exe mergebat.exe bat_patch.exe
+ALL: $(EXEC)
 
 
+bat_fit.exe : bat_fit.f90
+	$(F90) $(FFLAGS) bat_fit.f90 -o bat_fit.exe
 
-F90=gfortran
-FFLAGS= -O  $(NCDF) -fno-second-underscore -ffree-line-length-256 
-
-ALL: bat_fit mergebat
-
-
-bat_fit : bat_fit.f90
-	$(F90) $(FFLAGS) bat_fit.f90 -o bat_fit
-
-bat_patch : bat_patch.f90
-	$(F90) $(FFLAGS) bat_patch.f90 -o bat_patch
+bat_patch.exe : bat_patch.f90
+	$(F90) $(FFLAGS) bat_patch.f90 -o bat_patch.exe
 
 
-mergebat : mergebat.f90
-	$(F90) $(FFLAGS) mergebat.f90 -o mergebat
+mergebat.exe : mergebat.f90
+	$(F90) $(FFLAGS) mergebat.f90 -o mergebat.exe
 
 
 clean:
-	rm -f bat_fit mergebat *~ *.mod *.o 
+	rm -f $(EXEC) *~ *.mod *.o 
